style.css
*{
    font-family: "Roboto", sans-serif;
    margin: 0;
    padding: 0;
    text-align: center;
}

.container{
    width: 100vw;
    height: 100vh;
    background-color: #393939;
    display: flex;
    justify-content: center;
    align-items: center;
}

.calculatorBackground{
    width: 60%;
    height: 90%;
    background-color: rgba(19, 19, 19, .25);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    border: 10px inset #171717;
}

.calculatorContainer{
    font-size: 2rem;
    width: 400px;
    height: 500px;
    background-color: #515151;
    display: flex;
    flex-direction: column;
    align-items: center;
    -webkit-user-select: none;
    user-select: none;
    box-shadow: 5px 5px 2px #171717;
    border-radius: 5px;
}

#display{
    font-family: "VT323", monospace;
    font-weight: bolder;
    font-style: normal;
    width: 90%;
    height: 20%;
    background-color: #556B2F;
    margin-top: 5%;
    font-size: 1.7em;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    border-radius: 5px;
    border: 5px inset #171717;
}

button{
    background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
}

a {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #515151;
    color: #fff;
    border: 1px solid #393939;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 0px 5px 0px #393939;
    -moz-box-shadow: 0px 5px 0px #393939;
    -ms-box-shadow: 0px 5px 0px #393939;
    -o-box-shadow: 0px 5px 0px #393939;
    box-shadow: 0px 5px 0px #393939;
    text-shadow: 1px 1px 1px #393939;
}

a:active {
    position: relative;
    top: 5px;
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    -ms-box-shadow: none !important;
    -o-box-shadow: none !important;
    box-shadow: none !important;
    -webkit-transition: All 100ms ease;
    -moz-transition: All 100ms ease;
    -o-transition: All 100ms ease;
    -ms-transition: All 100ms ease;
    transition: All 100ms ease;
  }

.buttonContainer{
    width: 90%;
    height: 70%;
    background-color: #696969;
    margin-top: 5%;
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex;
}

#rightButtons{
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: flex-end;
    height: 100%;
    width: 25%;
}


#leftButtons{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: flex-end;
    height: 100%;
    width: 75%;
}

.calcButton{
    width: 32.22%;
    height: 17.25%;
    margin-bottom: 8px;
}

#rightButtons .calcButton{
    width: 100%;
}

#btn11{
    height: 37%;
    background: #483D8B;
    box-shadow: 0px 5px 0px #2C2656;
}

@media (max-width: 710px) {
    .calculatorBackground{
        width: 90%;
        height: 60%;
    }

    .calculatorContainer{
        width: 200px;
        height: 300px;
        font-size: 1em;
    }

    a:hover {
        position: relative;
        top: 5px;
        -webkit-box-shadow: none !important;
        -moz-box-shadow: none !important;
        -ms-box-shadow: none !important;
        -o-box-shadow: none !important;
        box-shadow: none !important;
        -webkit-transition: All 100ms ease;
        -moz-transition: All 100ms ease;
        -o-transition: All 100ms ease;
        -ms-transition: All 100ms ease;
        transition: All 100ms ease;
      }

    .calcButton{
        width: 31.22%;
        height: 15.5%;
        margin-bottom: 8px;
    }

    #btn11{
        height: 35.5%;
    }


}

